--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   h1 {
     text-align: center;
-    color: #90ee90;
+    color: #FFD700;
     margin-bottom: 20px;
   }
 
@@ -110,7 +110,7 @@
   <div class="exhibition-banner" style="display: inline-block; width: 90%; max-width: 500px; margin-right: 20px; background: #fff3e0; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
     <img src="https://i.ibb.co/jktZ8CjC/Whats-App-Image-2025-07-05-at-20-51-39-ea0bcbf9.jpg" alt="Exhibition Banner" style="width: 100%; border-radius: 10px; object-fit: cover; max-height: 250px;" />
     <div style="margin-top: 15px;">
-      <h2 style="color: #d84315; margin: 0;">Upcoming Exhibition</h2>
+      <h2 style="color:#1e1e1e; margin: 0;">Upcoming Exhibition</h2>
       <p style="margin: 5px 0;"><strong>📅 Dates:</strong> 7, 8, 9, 10 August 2025</p>
       <p><strong>📍 Hall:</strong> Scout Guide Hall</p>
       <p><strong>🗺 Address:</strong> Shivaji Park, Dadar</p>
@@ -122,7 +122,7 @@
   <div class="exhibition-banner" style="display: inline-block; width: 90%; max-width: 500px; margin-right: 20px; background: #f3e5f5; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
     <img src="https://i.ibb.co/jktZ8CjC/Whats-App-Image-2025-07-05-at-20-51-39-ea0bcbf9.jpg" alt="Exhibition Banner 2" style="width: 100%; border-radius: 10px; object-fit: cover; max-height: 250px;" />
     <div style="margin-top: 15px;">
-      <h2 style="color: #6a1b9a; margin: 0;">Upcoming Exhibition</h2>
+      <h2 style="color: #1e1e1e; margin: 0;">Upcoming Exhibition</h2>
       <p style="margin: 5px 0;"><strong>📅 Dates:</strong> 1, 2, 3 August 2025</p>
       <p><strong>📍 Hall:</strong> CKP HALL</p>
       <p><strong>🗺 Address:</strong> Kharkar Alley, Thane West</p>
