--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <!-- 🌟 Scrollable Exhibition Banner Section -->
 <div id="exhibition-container" style="overflow-x: auto; white-space: nowrap; padding: 20px 10px;">
   <!-- Exhibition 1 -->
-  <div class="exhibition-banner" style="display: inline-block; width: 90%; max-width: 500px; margin-right: 20px; background: #fff3e0; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+  <div class="exhibition-banner" style="display: inline-block; width: 90%; max-width: 500px; margin-right: 20px; background: #1e1e1e; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
     <img src="https://i.ibb.co/jktZ8CjC/Whats-App-Image-2025-07-05-at-20-51-39-ea0bcbf9.jpg" alt="Exhibition Banner" style="width: 100%; border-radius: 10px; object-fit: cover; max-height: 250px;" />
     <div style="margin-top: 15px;">
       <h2 style="color:#1e1e1e; margin: 0;">Upcoming Exhibition</h2>
@@ -119,7 +119,7 @@
   </div>
 
   <!-- Exhibition 2 -->
-  <div class="exhibition-banner" style="display: inline-block; width: 90%; max-width: 500px; margin-right: 20px; background: #f3e5f5; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+  <div class="exhibition-banner" style="display: inline-block; width: 90%; max-width: 500px; margin-right: 20px; background: #1e1e1e; padding: 20px; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
     <img src="https://i.ibb.co/jktZ8CjC/Whats-App-Image-2025-07-05-at-20-51-39-ea0bcbf9.jpg" alt="Exhibition Banner 2" style="width: 100%; border-radius: 10px; object-fit: cover; max-height: 250px;" />
     <div style="margin-top: 15px;">
       <h2 style="color: #1e1e1e; margin: 0;">Upcoming Exhibition</h2>
