--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     font-family: 'Segoe UI', sans-serif;
     margin: 0;
     padding: 20px;
-    background: #121212;
+    background: #C9D9EC;
     color: #ffffff;
   }
 
