--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     font-family: 'Segoe UI', sans-serif;
     margin: 0;
     padding: 20px;
-    background: #C9D9EC;
-    color: #ffffff;
+    background: #0c1a2b; /* Deep navy background */
+    color: #f8f4e3; /* Soft ivory text */
   }
 
   h1 {
     text-align: center;
-    color: #FFD700;
+    color: #ffd700; /* Gold headline */
     margin-bottom: 20px;
+    letter-spacing: 1px;
   }
 
   .categories {
@@ -25,19 +26,20 @@
   }
 
   .categories button {
-    background-color: #2e7d32;
-    color: white;
+    background-color: #d4af37; /* Golden buttons */
+    color: #0c1a2b;
     border: none;
     padding: 10px 20px;
     margin: 5px;
     font-size: 16px;
-    border-radius: 8px;
+    border-radius: 30px;
+    font-weight: bold;
     cursor: pointer;
-    transition: 0.3s ease;
+    transition: background 0.3s ease;
   }
 
   .categories button:hover {
-    background-color: #1b5e20;
+    background-color: #b4912c;
   }
 
   .catalog {
@@ -47,30 +49,33 @@
   }
 
   .product {
-    background: #1e1e1e;
-    padding: 15px;
-    border-radius: 15px;
-    box-shadow: 0 5px 15px rgba(255,255,255,0.05);
+    background: #182c47; /* Slightly lighter navy card */
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1); /* Gold glow */
     text-align: center;
     transition: 0.3s ease;
   }
 
   .product img {
     max-width: 100%;
-    border-radius: 10px;
+    border-radius: 12px;
     height: 180px;
     object-fit: cover;
+    border: 2px solid #d4af37;
   }
 
   .product h3 {
-    margin: 10px 0 5px;
-    color: #ffffff;
+    margin: 12px 0 5px;
+    color: #ffd700;
+    font-size: 18px;
   }
 
   .product p {
     margin: 5px 0;
-    color: #cccccc;
+    color: #f0eada;
     font-size: 14px;
+    line-height: 1.4;
   }
 
   .whatsapp {
@@ -79,14 +84,25 @@
     background-color: #25D366;
     color: white;
     padding: 10px 15px;
-    border-radius: 8px;
+    border-radius: 25px;
     text-decoration: none;
+    font-weight: bold;
   }
 
   .whatsapp:hover {
     background-color: #128C7E;
   }
+
+  footer {
+    text-align: center;
+    padding: 20px 0;
+    color: #cccccc;
+    font-size: 14px;
+    border-top: 1px solid #2e3e57;
+    margin-top: 40px;
+  }
 </style>
+
 
 </head>
 <body>
