--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
   }
 
   .product {
-    background: #182c47; /* Slightly lighter navy card */
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0 4px 15px rgba(255, 215, 0, 0.1); /* Gold glow */
-    text-align: center;
-    transition: 0.3s ease;
-  }
+  background: #12263a; /* Lighter navy for contrast */
+  padding: 20px;
+  border-radius: 20px;
+  border: 1.5px solid #d4af37; /* Gold border */
+  box-shadow: 0 4px 12px rgba(255, 215, 0, 0.15); /* Soft gold glow */
+  text-align: center;
+  transition: 0.3s ease;
+}
+
 
   .product img {
     max-width: 100%;
