added  side Latkan

--- a/index.html
+++ b/index.html
@@ -1133,6 +1133,15 @@
   </a>
 </div>
 
+<!-- Product 58:- Latkan Product: side Latkan (₹100 each) -->
+<div class="product" data-category="latkan">
+  <img src="https://i.ibb.co/0jXmT3sW/Whats-App-Image-2025-07-03-at-16-13-49-a579db5a.jpg" alt="Side Latkan">
+  <h3>Side Latkan</h3>
+  <p><strong>Price:</strong> ₹100 each</p>
+  <p>Beautiful handcrafted latkan perfect for toran or backdrop enhancement. Adds festive charm to your decor.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
