added  Premium Latkan

--- a/index.html
+++ b/index.html
@@ -1142,6 +1142,15 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 58:- Latkan Product: Premium Latkan  -->
+<div class="product" data-category="latkan">
+  <img src="https://i.ibb.co/jZ6509FS/Whats-App-Image-2025-07-03-at-16-13-52-2a57641a.jpg" alt="Premium Latkan">
+  <h3>Premium Latkan</h3>
+  <p><strong>Price:</strong> ₹350</p>
+  <p>Exquisite premium latkan made with high-quality materials, ideal for toran, backdrops, and festive decor.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
