added  Premium Latkan(yellow)

--- a/index.html
+++ b/index.html
@@ -1151,6 +1151,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 59:- Latkan Product: Premium Latkan(yellow)  -->
+<div class="product" data-category="latkan">
+  <img src="https://i.ibb.co/xSDdy5rb/Whats-App-Image-2025-07-03-at-16-13-52-51b0f89b.jpg" alt="Premium Latkan Yellow">
+  <h3>Premium Latkan – Yellow</h3>
+  <p><strong>Price:</strong> ₹350</p>
+  <p>Premium yellow latkan made with elegant fabric and detailing, perfect for festive decorations and toran setups.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
