added  Premium Latkan(red)

--- a/index.html
+++ b/index.html
@@ -1160,6 +1160,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 59:- Latkan Product: Premium Latkan(red)  -->
+<div class="product" data-category="latkan">
+  <img src="https://i.ibb.co/rR9SPVf7/Whats-App-Image-2025-07-03-at-16-13-53-30d6d242.jpg" alt="Premium Latkan Red">
+  <h3>Premium Latkan – Red</h3>
+  <p><strong>Price:</strong> ₹350</p>
+  <p>Premium red latkan made with elegant fabric and detailing, ideal for grand festive decor and backdrops.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
+
 
  </div>
 
