added  Premium Latkan(dark yellow)

--- a/index.html
+++ b/index.html
@@ -1169,12 +1169,21 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 59:- Latkan Product: Premium Latkan(pink)  -->
+<!-- Product 60:- Latkan Product: Premium Latkan(pink)  -->
 <div class="product" data-category="latkan">
   <img src="https://i.ibb.co/h11YWKcy/Whats-App-Image-2025-07-03-at-16-13-53-b97895e9.jpg" alt="Premium Latkan Pink">
   <h3>Premium Latkan – Pink</h3>
   <p><strong>Price:</strong> ₹350</p>
   <p>Premium pink latkan made with elegant fabric and detailing, ideal for grand festive decor and backdrops.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
+<!-- Product 61:- Latkan Product: Premium Latkan(dark yellow)  -->
+<div class="product" data-category="latkan">
+  <img src="https://i.ibb.co/sX1ZVzV/Whats-App-Image-2025-07-03-at-16-13-53-90f8fba0.jpg" alt="Premium Latkan Dark Yellow">
+  <h3>Premium Latkan – Dark Yellow</h3>
+  <p><strong>Price:</strong> ₹350</p>
+  <p>Premium dark yellow latkan crafted for rich and traditional decor. Perfect for events and backdrops.</p>
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
