--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@
 </div>
 
 <!-- Product 58:- Latkan Product: side Latkan (₹100 each) -->
-<div class="product" data-category="latkan">
+<div class="product latkan">
   <img src="https://i.ibb.co/0jXmT3sW/Whats-App-Image-2025-07-03-at-16-13-49-a579db5a.jpg" alt="Side Latkan">
   <h3>Side Latkan</h3>
   <p><strong>Price:</strong> ₹100 each</p>
@@ -1143,7 +1143,7 @@
 </div>
 
 <!-- Product 58:- Latkan Product: Premium Latkan  -->
-<div class="product" data-category="latkan">
+<div class="product latkan">
   <img src="https://i.ibb.co/jZ6509FS/Whats-App-Image-2025-07-03-at-16-13-52-2a57641a.jpg" alt="Premium Latkan">
   <h3>Premium Latkan</h3>
   <p><strong>Price:</strong> ₹350</p>
@@ -1152,7 +1152,7 @@
 </div>
 
 <!-- Product 59:- Latkan Product: Premium Latkan(yellow)  -->
-<div class="product" data-category="latkan">
+<div class="product latkan">
   <img src="https://i.ibb.co/xSDdy5rb/Whats-App-Image-2025-07-03-at-16-13-52-51b0f89b.jpg" alt="Premium Latkan Yellow">
   <h3>Premium Latkan – Yellow</h3>
   <p><strong>Price:</strong> ₹350</p>
