--- a/index.html
+++ b/index.html
@@ -1161,7 +1161,7 @@
 </div>
 
 <!-- Product 61:- Latkan Product: Premium Latkan(red)  -->
-<div class="product" data-category="latkan">
+<div class="product latkan">
   <img src="https://i.ibb.co/rR9SPVf7/Whats-App-Image-2025-07-03-at-16-13-53-30d6d242.jpg" alt="Premium Latkan Red">
   <h3>Premium Latkan – Red</h3>
   <p><strong>Price:</strong> ₹350</p>
@@ -1170,7 +1170,7 @@
 </div>
 
 <!-- Product 62:- Latkan Product: Premium Latkan(pink)  -->
-<div class="product" data-category="latkan">
+<div class="product latkan">
   <img src="https://i.ibb.co/h11YWKcy/Whats-App-Image-2025-07-03-at-16-13-53-b97895e9.jpg" alt="Premium Latkan Pink">
   <h3>Premium Latkan – Pink</h3>
   <p><strong>Price:</strong> ₹350</p>
@@ -1179,7 +1179,7 @@
 </div>
 
 <!-- Product 63:- Latkan Product: Premium Latkan(dark yellow)  -->
-<div class="product" data-category="latkan">
+<div class="product latkan">
   <img src="https://i.ibb.co/sX1ZVzV/Whats-App-Image-2025-07-03-at-16-13-53-90f8fba0.jpg" alt="Premium Latkan Dark Yellow">
   <h3>Premium Latkan – Dark Yellow</h3>
   <p><strong>Price:</strong> ₹350</p>
