added Unique Design

--- a/index.html
+++ b/index.html
@@ -1187,6 +1187,15 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 64:- Latkan Product: Premium Latkan(Unique Design)  -->
+<div class="product latkan">
+  <img src="https://i.ibb.co/nsZxRBgF/Whats-App-Image-2025-07-03-at-16-13-54-d5bd1de7.jpg" alt="Premium Latkan Unique Design">
+  <h3>Premium Latkan – Unique Design</h3>
+  <p><strong>Price:</strong> ₹350</p>
+  <p>Elegant latkan with a distinctive color combination and shape, perfect for enhancing traditional decor aesthetics.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
