added Simple Yellow Latkan

--- a/index.html
+++ b/index.html
@@ -1196,6 +1196,15 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 64:- Latkan Product: Premium Latkan(Unique Design)  -->
+<div class="product latkan">
+  <img src="https://i.ibb.co/NdvK3t3f/Whats-App-Image-2025-07-03-at-16-13-52-e75b8eb3.jpg" alt="Simple Yellow Latkan">
+  <h3>Simple Yellow Latkan</h3>
+  <p><strong>Price:</strong> ₹100</p>
+  <p>Minimalistic yellow latkan made with quality fabric, ideal for everyday decoration or festive use.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
