added Aboli Gajara Mala

--- a/index.html
+++ b/index.html
@@ -1196,12 +1196,21 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
-<!-- Product 64:- Latkan Product: Premium Latkan(Unique Design)  -->
+<!-- Product 65:- Latkan Product:Simple Yellow Latkan  -->
 <div class="product latkan">
   <img src="https://i.ibb.co/NdvK3t3f/Whats-App-Image-2025-07-03-at-16-13-52-e75b8eb3.jpg" alt="Simple Yellow Latkan">
   <h3>Simple Yellow Latkan</h3>
   <p><strong>Price:</strong> ₹100</p>
   <p>Minimalistic yellow latkan made with quality fabric, ideal for everyday decoration or festive use.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
+<!-- Product 66:- Latkan Product: Aboli Gajara Mala -->
+<div class="product latkan">
+  <img src="https://i.ibb.co/BHZZZ5nj/Whats-App-Image-2025-07-04-at-10-14-33-a16a3058.jpg" alt="Aboli Gajara Mala">
+  <h3>Aboli Gajara Mala – 3ft</h3>
+  <p><strong>Price:</strong> ₹420</p>
+  <p>Beautiful 3ft Aboli flower gajara mala, crafted with care to bring vibrant color and charm to any occasion.</p>
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
