added Juhi Mala Latkan

--- a/index.html
+++ b/index.html
@@ -1214,6 +1214,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 67:- Latkan Product: Juhi Mala Latkan-->
+<div class="product latkan">
+  <img src="https://i.ibb.co/pvR31yhJ/Whats-App-Image-2025-07-04-at-10-14-34-76f137f0.jpg" alt="Juhi Mala Latkan">
+  <h3>Juhi Mala Latkan</h3>
+  <p><strong>Category:</strong> Latkan</p>
+  <p><strong>Price:</strong> ₹250</p>
+  <p>Elegant Juhi Mala latkan with a delicate floral design — perfect for festive decor and traditional celebrations.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
