added Yellow Shevanti Gajara Maal

--- a/index.html
+++ b/index.html
@@ -1224,6 +1224,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 68:- Latkan Product: Yellow Shevanti Gajara Maal-->
+<div class="product latkan">
+  <img src="https://i.ibb.co/s9PmVZ18/Whats-App-Image-2025-07-04-at-10-14-34-91b3048e.jpg" alt="Yellow Shevanti Gajara Maal">
+  <h3>Yellow Shevanti Gajara Maal</h3>
+  <p><strong>Category:</strong> Latkan</p>
+  <p><strong>Price:</strong> ₹420</p>
+  <p>Beautifully handcrafted Yellow Shevanti Gajara Maal, 3ft in length. Ideal for vibrant festive backdrops and home décor.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
