added Parjakta Maal

--- a/index.html
+++ b/index.html
@@ -1234,6 +1234,17 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 69:- Latkan Product: Parjakta Maal-->
+<div class="product latkan">
+  <img src="https://i.ibb.co/SXVHL8v0/Whats-App-Image-2025-07-04-at-10-14-35-65f81b59.jpg" alt="Parjakta Maal">
+  <h3>Parjakta Maal</h3>
+  <p><strong>Category:</strong> Latkan</p>
+  <p><strong>Length:</strong> 3ft</p>
+  <p><strong>Price:</strong> ₹250</p>
+  <p>Elegant 3ft Parjakta flower maal, perfect for festive and traditional decoration.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
