added White Shevanti Gajara Maal

--- a/index.html
+++ b/index.html
@@ -1245,6 +1245,17 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 70:- White Shevanti Gajara Maal-->
+<div class="product latkan">
+  <img src="https://i.ibb.co/pvR31yhJ/Whats-App-Image-2025-07-04-at-10-14-34-76f137f0.jpg" alt="White Shevanti Gajara Maal">
+  <h3>White Shevanti Gajara Maal</h3>
+  <p><strong>Category:</strong> Latkan</p>
+  <p><strong>Length:</strong> 3ft</p>
+  <p><strong>Price:</strong> ₹420</p>
+  <p>Premium white Shevanti gajara maal made with high-quality fabric. Ideal for backdrops, festivals, and pooja decor.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
