added Juhi Maal

--- a/index.html
+++ b/index.html
@@ -1256,6 +1256,17 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 71:-Juhi Maal-->
+<div class="product latkan">
+  <img src="https://i.ibb.co/kVVdCcR7/Whats-App-Image-2025-07-04-at-10-23-43-30daf1c3.jpg" alt="Juhi Maal 5ft">
+  <h3>Juhi Maal</h3>
+  <p><strong>Category:</strong> Latkan</p>
+  <p><strong>Length:</strong> 5ft</p>
+  <p><strong>Price:</strong> ₹600</p>
+  <p>Elegant 5ft Juhi Maal with realistic floral appearance. Perfect for festive decorations, pooja backdrops, and gifting.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
