--- a/index.html
+++ b/index.html
@@ -1267,6 +1267,17 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 72:-Prajakta Maal-->
+<div class="product latkan">
+  <img src="https://i.ibb.co/mVJJ6YXg/Whats-App-Image-2025-07-04-at-10-23-44-26d2fd78.jpg" alt="Prajakta Maal 5ft">
+  <h3>Prajakta Maal</h3>
+  <p><strong>Category:</strong> Latkan</p>
+  <p><strong>Length:</strong> 5ft</p>
+  <p><strong>Price:</strong> ₹600</p>
+  <p>Beautiful 5ft Prajakta Maal, crafted with vibrant blossoms. Ideal for traditional decor, poojas, and festive ambiance.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
