added Juhi Maal & Rose Latkan

--- a/index.html
+++ b/index.html
@@ -1278,6 +1278,17 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 73:-Juhi Maal & Rose Latkan-->
+<div class="product latkan">
+  <img src="https://i.ibb.co/LzqrGzNc/Whats-App-Image-2025-07-04-at-10-45-58-f42381f1.jpg" alt="Juhi Maal and Rose Latkan">
+  <h3>Juhi Maal & Rose Latkan</h3>
+  <p><strong>Category:</strong> Latkan</p>
+  <p><strong>Size:</strong> 1ft</p>
+  <p><strong>Price:</strong> ₹100 (Single) / ₹200 (Pair)</p>
+  <p>Elegant 1ft latkan featuring Juhi Maal and rose detailing — perfect for doorways, backdrops, and pooja decor.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
