added Small Size Lotus

--- a/index.html
+++ b/index.html
@@ -1289,6 +1289,17 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+
+<!-- Product 74:-Small Size Lotus-->
+<div class="product latkan">
+  <img src="https://i.ibb.co/ZzHjSKB3/Whats-App-Image-2025-07-04-at-10-54-51-c5bc287c.jpg" alt="Small Size Lotus">
+  <h3>Small Size Lotus</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹180</p>
+  <p>Beautiful handcrafted small lotus perfect for festive setups, home mandirs, and traditional decor accents.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  </div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
