added Small Size Lotus

--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@
 
 
 <!-- Product 74:-Small Size Lotus-->
-<div class="product latkan">
+<div class="product decor">
   <img src="https://i.ibb.co/ZzHjSKB3/Whats-App-Image-2025-07-04-at-10-54-51-c5bc287c.jpg" alt="Small Size Lotus">
   <h3>Small Size Lotus</h3>
   <p><strong>Category:</strong> Home Decor</p>
