added Large Size Lotus

--- a/index.html
+++ b/index.html
@@ -1300,6 +1300,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
   </div>
 
+<!-- Product 75:-Large Size Lotus-->
+<div class="product decor">
+  <img src="https://i.ibb.co/ZpGTY8Xq/Whats-App-Image-2025-07-04-at-10-54-52-b54ed6bb.jpg" alt="Large Size Lotus">
+  <h3>Large Size Lotus</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹399</p>
+  <p>Elegant large lotus piece, perfect for enhancing the beauty of your home decor or pooja arrangements.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
