added medium Size Lotus

--- a/index.html
+++ b/index.html
@@ -1310,6 +1310,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 76:-Medium Size Lotus-->
+<div class="product decor">
+  <img src="https://i.ibb.co/VcsgWwnc/Whats-App-Image-2025-07-04-at-10-54-52-e0b03934.jpg" alt="Medium Size Lotus">
+  <h3>Medium Size Lotus</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹270</p>
+  <p>Graceful medium-sized lotus decor, ideal for festive displays or spiritual spaces. Balanced in size and beauty.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
