--- a/index.html
+++ b/index.html
@@ -1320,6 +1320,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 77:-Pan Gonda Patches-->
+<div class="product decor">
+  <img src="https://i.ibb.co/XZX28y6W/Whats-App-Image-2025-07-04-at-12-48-28-f28591db.jpg" alt="Pan Gonda Patches">
+  <h3>Pan Gonda Patches</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹25 each (4 pieces ₹100)</p>
+  <p>Colorful Pan Gonda patches perfect for enhancing pooja decor or festive backdrops. Affordable and eye-catching!</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
