added Pink Flower & Velvet Leaf Latkan

--- a/index.html
+++ b/index.html
@@ -1330,6 +1330,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 78:-Pink Flower & Velvet Leaf Latkan-->
+<div class="product decor">
+  <img src="https://i.ibb.co/gbJ5sK0v/Whats-App-Image-2025-07-04-at-12-48-29-3bedf0e7.jpg" alt="Pink Flower with Velvet Leaf Latkan">
+  <h3>Pink Flower & Velvet Leaf Latkan</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹150 (per pair)</p>
+  <p>Elegant pink flower with rich velvet leaf and attached latkan – a charming pair to enhance your festive or interior decor.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
