added Lotus Leaf & Flower Kali

--- a/index.html
+++ b/index.html
@@ -1340,6 +1340,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 79:-Lotus Leaf & Flower Kali-->
+<div class="product decor">
+  <img src="https://i.ibb.co/5fTnX59/Whats-App-Image-2025-07-04-at-12-51-44-5e0b1722.jpg" alt="Lotus Leaf and Flower Kali">
+  <h3>Lotus Leaf & Flower Kali</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹25 each</p>
+  <p>Decorative lotus leaf and flower kali made from water-float material. Perfect for traditional floating arrangements or pooja decor.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
