--- a/index.html
+++ b/index.html
@@ -1350,6 +1350,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 80:-Floating Lotus Flower (Big)-->
+<div class="product decor">
+  <img src="https://i.ibb.co/nskfRWxq/Whats-App-Image-2025-07-04-at-12-51-44-42806dff.jpg" alt="Floating Lotus Flower Big Size">
+  <h3>Floating Lotus Flower (Big)</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹50 each</p>
+  <p>Big size floating lotus flower ideal for water decor, pooja bowls, and festive arrangements. Elegant and reusable.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
