added Floating Lotus Flower (Big)

--- a/index.html
+++ b/index.html
@@ -1360,6 +1360,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 81:-Floating Lotus Flower (Big)-->
+<div class="product decor">
+  <img src="https://i.ibb.co/1GS3bnmR/Whats-App-Image-2025-07-04-at-12-51-44-1172c377.jpg" alt="Floating Lotus Flower Big Size 2">
+  <h3>Floating Lotus Flower (Big)</h3>
+  <p><strong>Category:</strong> Home Decor</p>
+  <p><strong>Price:</strong> ₹50 each</p>
+  <p>Big size floating lotus flower – perfect for water decor, pooja bowls, or festival decoration. Multiple colors available.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
