--- a/index.html
+++ b/index.html
@@ -1370,6 +1370,16 @@
   <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
 </div>
 
+<!-- Product 82:-Haar / Samai Ring-->
+<div class="product haar">
+  <img src="https://i.ibb.co/7JbxBWR/Whats-App-Image-2025-07-04-at-13-05-22-50e725c0.jpg" alt="Haar or Samai Ring">
+  <h3>Haar / Samai Ring</h3>
+  <p><strong>Category:</strong> Haar / Kanthi</p>
+  <p><strong>Price:</strong> ₹100</p>
+  <p>Beautiful multipurpose Haar or Samai Ring – perfect for traditional decoration or use with samai stands. Elegant and reusable.</p>
+  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+</div>
+
  </div>
 
   <footer style="text-align: center; padding: 20px; font-size: 14px; color: #555;">
