--- a/index.html
+++ b/index.html
@@ -1133,14 +1133,18 @@
   </a>
 </div>
 
-<!-- Product 58:- Latkan Product: side Latkan (₹100 each) -->
+<!-- Product 58:- Latkan Product: Side Latkan (₹100 each) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/0jXmT3sW/Whats-App-Image-2025-07-03-at-16-13-49-a579db5a.jpg" alt="Side Latkan">
   <h3>Side Latkan</h3>
+  <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹100 each</p>
-  <p>Beautiful handcrafted latkan perfect for toran or backdrop enhancement. Adds festive charm to your decor.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <p>Beautiful handcrafted latkan, perfect for festive decorations, pooja setups, and backdrops. Made from high-quality materials for durability.</p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Side Latkan' (₹100 each).%0AProduct Image: https://i.ibb.co/0jXmT3sW/Whats-App-Image-2025-07-03-at-16-13-49-a579db5a.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
+
 
 <!-- Product 59:- Latkan Product: Premium Latkan  -->
 <div class="product latkan">
