--- a/index.html
+++ b/index.html
@@ -1146,13 +1146,16 @@
 </div>
 
 
-<!-- Product 59:- Latkan Product: Premium Latkan  -->
+<!-- Product 59:- Latkan Product: Premium Latkan (₹350) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/jZ6509FS/Whats-App-Image-2025-07-03-at-16-13-52-2a57641a.jpg" alt="Premium Latkan">
   <h3>Premium Latkan</h3>
+  <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹350</p>
   <p>Exquisite premium latkan made with high-quality materials, ideal for toran, backdrops, and festive decor.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Premium Latkan' (₹350).%0AProduct Image: https://i.ibb.co/jZ6509FS/Whats-App-Image-2025-07-03-at-16-13-52-2a57641a.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
 
 <!-- Product 60:- Latkan Product: Premium Latkan(yellow)  -->
