--- a/index.html
+++ b/index.html
@@ -1158,14 +1158,18 @@
   </a>
 </div>
 
-<!-- Product 60:- Latkan Product: Premium Latkan(yellow)  -->
+<!-- Product 60:- Latkan Product: Premium Latkan (Yellow) (₹350) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/xSDdy5rb/Whats-App-Image-2025-07-03-at-16-13-52-51b0f89b.jpg" alt="Premium Latkan Yellow">
   <h3>Premium Latkan – Yellow</h3>
+  <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹350</p>
   <p>Premium yellow latkan made with elegant fabric and detailing, perfect for festive decorations and toran setups.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Premium Latkan – Yellow' (₹350).%0AProduct Image: https://i.ibb.co/xSDdy5rb/Whats-App-Image-2025-07-03-at-16-13-52-51b0f89b.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
+
 
 <!-- Product 61:- Latkan Product: Premium Latkan(red)  -->
 <div class="product latkan">
