--- a/index.html
+++ b/index.html
@@ -1171,40 +1171,54 @@
 </div>
 
 
-<!-- Product 61:- Latkan Product: Premium Latkan(red)  -->
+<!-- Product 61:- Latkan Product: Premium Latkan – Red (₹350) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/rR9SPVf7/Whats-App-Image-2025-07-03-at-16-13-53-30d6d242.jpg" alt="Premium Latkan Red">
   <h3>Premium Latkan – Red</h3>
+  <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹350</p>
   <p>Premium red latkan made with elegant fabric and detailing, ideal for grand festive decor and backdrops.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Premium Latkan – Red' (₹350).%0AProduct Image: https://i.ibb.co/rR9SPVf7/Whats-App-Image-2025-07-03-at-16-13-53-30d6d242.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
 
-<!-- Product 62:- Latkan Product: Premium Latkan(pink)  -->
+
+<!-- Product 62:- Latkan Product: Premium Latkan – Pink (₹350) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/h11YWKcy/Whats-App-Image-2025-07-03-at-16-13-53-b97895e9.jpg" alt="Premium Latkan Pink">
   <h3>Premium Latkan – Pink</h3>
+  <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹350</p>
   <p>Premium pink latkan made with elegant fabric and detailing, ideal for grand festive decor and backdrops.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Premium Latkan – Pink' (₹350).%0AProduct Image: https://i.ibb.co/h11YWKcy/Whats-App-Image-2025-07-03-at-16-13-53-b97895e9.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
 
-<!-- Product 63:- Latkan Product: Premium Latkan(dark yellow)  -->
+
+<!-- Product 63:- Latkan Product: Premium Latkan – Dark Yellow (₹350) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/sX1ZVzV/Whats-App-Image-2025-07-03-at-16-13-53-90f8fba0.jpg" alt="Premium Latkan Dark Yellow">
   <h3>Premium Latkan – Dark Yellow</h3>
+  <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹350</p>
   <p>Premium dark yellow latkan crafted for rich and traditional decor. Perfect for events and backdrops.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Premium Latkan – Dark Yellow' (₹350).%0AProduct Image: https://i.ibb.co/sX1ZVzV/Whats-App-Image-2025-07-03-at-16-13-53-90f8fba0.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
 
-<!-- Product 64:- Latkan Product: Premium Latkan(Unique Design)  -->
+<!-- Product 64:- Latkan Product: Premium Latkan – Unique Design (₹350) -->
 <div class="product latkan">
   <img src="https://i.ibb.co/nsZxRBgF/Whats-App-Image-2025-07-03-at-16-13-54-d5bd1de7.jpg" alt="Premium Latkan Unique Design">
   <h3>Premium Latkan – Unique Design</h3>
+  <p><strong>Category:</strong> Latkan</p>
   <p><strong>Price:</strong> ₹350</p>
   <p>Elegant latkan with a distinctive color combination and shape, perfect for enhancing traditional decor aesthetics.</p>
-  <a href="https://wa.me/919545668366" class="whatsapp" target="_blank">Buy on WhatsApp</a>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order this 'Premium Latkan – Unique Design' (₹350).%0AProduct Image: https://i.ibb.co/nsZxRBgF/Whats-App-Image-2025-07-03-at-16-13-54-d5bd1de7.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
 </div>
 
 <!-- Product 65:- Latkan Product:Simple Yellow Latkan  -->
